Corrected detail breadcrumb rwd and minor layout bugs

--- a/public_html/layouts/basic/styles/_Style.scss
+++ b/public_html/layouts/basic/styles/_Style.scss
@@ -4094,10 +4094,6 @@ select.form-control {
 	}
 }
 
-.detailViewActionsBtn .btn-group {
-	margin-left: 15px;
-}
-
 .dropdownEntityState ul li {
 	border-left: 10px solid #fff;
 }
