--- a/public_html/layouts/basic/styles/layout/_Breadcrumb.scss
+++ b/public_html/layouts/basic/styles/layout/_Breadcrumb.scss
@@ -15,7 +15,7 @@
 			max-height: calc(100vh - 50px);
 			width: 100%;
 			color: $color-navbar;
-			background-color: darken($gray-100, 5%);
+			background-color: darken($gray-100, 2%);
 			z-index: 2000;
 			padding: 30px;
 			-webkit-transition: right ease-in-out 0.35s;
